--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="top-container">
       <img src="cloud.png" alt="cloud image" class="top-cloud">
       <h1>I am Isha</h1>
-      <h2>I am a Developer</h2>
+      <h2>I am a FullstackDeveloper With the Prior Industry Experience of 12 months.</h2>
       <img src="cloud.png" alt="cloud image" class="bottom-cloud">
       <img src="mountain.png" alt="mountain image">
     </div>
@@ -28,16 +28,29 @@
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="ecommerce" src="ecommerce.png" alt="">
-          <h3>Web Developement</h3>
-          <p >I have high Interest in Web Developement .This is my personal responsive Website Developed from scratch.
+          <h3>Frontend Frameworks/Languages.</h3>
+          <ul>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JS</li>
+            <li>React</li>
+            <li>Bootstrap</li>
+          </ul>
+          <!-- <p >I have high Interest in Web Developement .This is my personal responsive Website Developed from scratch.
             I take a good care of necessary web Design principles like <span>color theory, typography,ux designs and choosing the right fonts</span>
             for the websites.
-          </p>
+          </p> -->
         </div>
         <div class="skill-row">
           <img class="java" src="java.png" alt="">
-          <h3>Java</h3>
-          <p >I am a leetcoder and have solved <span>92+ leetcode questions</span> and a <span>2nd ranker on GeeksForGeeks</span>. I love playing with code using java language.Now you can figure out the source behind my coffee inspiration😉</p>
+          <h3>Backend Frameworks/Languages</h3>
+          <ul>
+            <li>MYSQL</li>
+            <li>Laravel</li>
+            <li>PHP</li>
+            <li>MongoDB</li>
+          </ul>
+          <!-- <p >I am a leetcoder and have solved <span>92+ leetcode questions</span> and a <span>2nd ranker on GeeksForGeeks</span>. I love playing with code using java language.Now you can figure out the source behind my coffee inspiration😉</p> -->
         </div>
       </div>
       <hr>
