--- a/index.html
+++ b/index.html
@@ -1,74 +1,93 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Isha sah</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <!-- adding icon to our browser -->
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat+Alternates&family=Sacramento&display=swap" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat+Alternates&family=Sacramento&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="top-container">
-      <img src="cloud.png" alt="cloud image" class="top-cloud">
+      <img src="cloud.png" alt="cloud image" class="top-cloud" />
       <h1>I am Isha</h1>
-      <h2>I am a FullstackDeveloper With the Prior Industry Experience of 12 months.</h2>
-      <img src="cloud.png" alt="cloud image" class="bottom-cloud">
-      <img src="mountain.png" alt="mountain image">
+      <p class="introduction">
+        I am a FullstackDeveloper With the Prior Industry Experience of 12
+        months.
+      </p>
+      <img src="cloud.png" alt="cloud image" class="bottom-cloud" />
+      <img src="mountain.png" alt="mountain image" />
     </div>
     <div class="middle-container">
       <div class="profile">
         <!-- <img src="isha.jpg" alt="my profile picture" class="profile"> -->
-        <iframe src="https://giphy.com/embed/Z96Ax1zh5aSsHczGve" width="350" height="350" frameBorder="0" class="giphy-embed" allowFullScreen></iframe>
-        <p class="intro">I am Isha a Developer and a cup of coffee ☕ is my Inspiration</p>
+        <iframe
+          src="https://giphy.com/embed/Z96Ax1zh5aSsHczGve"
+          width="350"
+          height="350"
+          frameborder="0"
+          class="giphy-embed"
+          allowfullscreen
+        ></iframe>
+        <p class="intro">
+          I am Isha a Developer and a cup of coffee ☕ is my Inspiration
+        </p>
       </div>
-      <hr>
+      <hr />
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
-          <img class="ecommerce" src="ecommerce.png" alt="">
+          <img class="ecommerce" src="ecommerce.png" alt="" />
           <h3>Frontend Frameworks/Languages.</h3>
-          <ul>
+          <ul class="intro">
             <li>HTML</li>
             <li>CSS</li>
             <li>JS</li>
             <li>React</li>
             <li>Bootstrap</li>
           </ul>
-          <!-- <p >I have high Interest in Web Developement .This is my personal responsive Website Developed from scratch.
-            I take a good care of necessary web Design principles like <span>color theory, typography,ux designs and choosing the right fonts</span>
-            for the websites.
-          </p> -->
         </div>
         <div class="skill-row">
-          <img class="java" src="java.png" alt="">
+          <img class="java" src="laravel.jpg" alt="" />
           <h3>Backend Frameworks/Languages</h3>
-          <ul>
+          <ul class="intro">
             <li>MYSQL</li>
             <li>Laravel</li>
             <li>PHP</li>
             <li>MongoDB</li>
           </ul>
-          <!-- <p >I am a leetcoder and have solved <span>92+ leetcode questions</span> and a <span>2nd ranker on GeeksForGeeks</span>. I love playing with code using java language.Now you can figure out the source behind my coffee inspiration😉</p> -->
         </div>
       </div>
-      <hr>
+      <hr />
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>I would be glad to be a part of your team or Organization. </h3>
-        <p class="contact-message">I would feel worthy if I could design and create website you have ever imagined of. </p>
-        <button type="submit" name="button"><a class="btn" href="mailto:ishasah035@email.com">CONTACT ME</a></button>
+        <h3>I would be glad to be a part of your team or Organization.</h3>
+        <p class="contact-message">
+          I would feel worthy if I could design and create website you have ever
+          imagined of.
+        </p>
+        <button type="submit" name="button">
+          <a class="btn" href="mailto:ishasah035@email.com">CONTACT ME</a>
+        </button>
       </div>
     </div>
 
-
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/isha-sah-552304174/">LinkedIn</a>
+      <a
+        class="footer-link"
+        href="https://www.linkedin.com/in/isha-sah-552304174/"
+        >LinkedIn</a
+      >
       <a class="footer-link" href="https://github.com/isha035-sah">GitHub</a>
-      <a class="footer-link" href="https://isha035-sah.github.io/Tindog-site/">Website</a>
+      <a class="footer-link" href="https://isha035-sah.github.io/Tindog-site/"
+        >Website</a
+      >
       <p class="copy-right">©2022 Isha Sah.</p>
     </div>
-
   </body>
 </html>
