add few changes'

--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
   <body>
     <div class="top-container">
       <img src="cloud.png" alt="cloud image" class="top-cloud" />
-      <h1>I am Isha</h1>
+      <h1>Hi, I'm Isha 👋</h1>
       <p class="introduction">
-        I am a FullstackDeveloper With the Prior Industry Experience of 12
-        months.
+        Fullstack Developer (Node.js | Laravel | Vue.js)
       </p>
       <img src="cloud.png" alt="cloud image" class="bottom-cloud" />
       <img src="mountain.png" alt="mountain image" />
@@ -45,20 +44,22 @@
           <img class="ecommerce" src="ecommerce.png" alt="" />
           <h3>Frontend Frameworks/Languages.</h3>
           <ul class="intro">
+            <li>Vue.js</li>
+            <li>React.js</li>
+            <li>Bootstrap</li>
+            <li>JS</li>
             <li>HTML</li>
             <li>CSS</li>
-            <li>JS</li>
-            <li>React</li>
-            <li>Bootstrap</li>
           </ul>
         </div>
         <div class="skill-row">
           <img class="java" src="laravel.jpg" alt="" />
           <h3>Backend Frameworks/Languages</h3>
           <ul class="intro">
-            <li>MYSQL</li>
             <li>Laravel</li>
+            <li>MYSQL</li>
             <li>PHP</li>
+            <li>Node.js</li>
             <li>MongoDB</li>
           </ul>
         </div>
